# NeuralToy

./: CMakeLists.txt  README.md
example/: main.cpp
lib/include/: dataPair.h  dataSet.h  gradientDescent.h  iAdjustment.h  iTransferFunction.h  iWeight.h  layer.h  learningRule.h  network.h  neuron.h  pattern.h  resilientpropagation.h
lib/src/: dataPair.cpp  dataSet.cpp  gradientDescent.cpp  layer.cpp  learningRule.cpp  network.cpp  neuron.cpp  pattern.cpp  resilientpropagation.cpp
unitTest/: dataSetTest.cpp  gradientDescentTest.cpp  layerTest.cpp  learningRuleTest.cpp  main.cpp  networkTest.cpp  neuronTest.cpp  patternTest.cpp  resilientPropagationTest.cpp
